--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.7.0",
     "@parcel/transformer-less": "^2.7.0",
+    "@parcel/transformer-webmanifest": "^2.7.0",
     "parcel": "^2.7.0",
     "parcel-bundler": "^1.12.5"
   }
